--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "ts-node": "^10.9.2"
   }
 }
