--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,10 +18,11 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "aws4": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.7.2",
     "nodemailer": "^6.9.15",
     "ts-node": "^10.9.2"
   }
