--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,11 +14,14 @@
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.7",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.447.0",
     "markdown-to-jsx": "^7.5.0",
-    "next": "14.2.13",
+    "mongoose": "^8.7.2",
+    "next": "^15.0.1",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -33,6 +36,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "node-loader": "^2.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
