--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.7",
     "gray-matter": "^4.0.3",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.447.0",
     "markdown-to-jsx": "^7.5.0",
     "mongoose": "^8.7.2",
