--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,11 +22,12 @@
     "lucide-react": "^0.447.0",
     "markdown-to-jsx": "^7.5.0",
     "mongoose": "^8.7.2",
-    "next": "^15.0.1",
+    "next": "^14",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
