--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/nodemailer": "^6.4.16",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
   },
   "dependencies": {
     "aws4": "^1.13.2",
@@ -24,6 +24,7 @@
     "express": "^4.21.0",
     "mongoose": "^8.7.2",
     "nodemailer": "^6.9.15",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+     "rimraf": "^6.0.1"
   }
 }
