--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/nodemailer": "^6.4.16",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.7"
   },
   "dependencies": {
     "aws4": "^1.13.2",
