--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
